Externalize chronometer in Tools class Serialization performances related classes added